--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,16 @@
 /* Add CSS Styling */
+.odd {
+    background-color: rgb(236, 147, 162);
+    font-family: 'Verdana', 'DejaVu Sans', sans-serif;
+}
+#second {
+    color: blue;
+    font-size: 36px;
+}
+#third, #fourth {
+    font-size: 24px;
+}
+#fourth {
+    background-color: lightgreen;
+    font-weight: bold;
+}
