--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -3,25 +3,40 @@ body {
   font-family: sans-serif;
 }
 
+.title, .content, .button-container {
+  font-size: 16px;
+}
+
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 20px 5px 5px;
 }
 
 .title {
   background: #e3f4ff;
+  margin: 15px 10px 10px;
+  padding: 10px
 }
 
 .content {
   background: #e3f4ff;
+  margin: 10px;
+  padding: 15px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  padding: 10px;
+  margin: 10px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: 0 auto;
+  padding: 10px 30px
 }
